--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tryout",
+  "name": "webpack-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "jshint": "^2.9.4",
     "jshint-loader": "^0.8.3",
     "node-sass": "^4.3.0",
